--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.10",
+    "swiper": "^9.3.1",
     "tailwindcss": "3.3.2"
   }
 }
